Cleanup JVM options after JDK 11 bump (#40961)
This commit cleans up the default JVM options now that the minimum
runtime is JDK 11.